# VIAVI

./: .gitignore  README.md
JsonConverter/: README.MD  app.py  merged.json  requirements.txt
JsonConverter/config/: merged.json  variables.py
JsonConverter/gui/: buttons.py  info.py  mainWindow.py
JsonConverter/output/: output.csv
JsonConverter/resource/: CTO_01_P01-2025-07-25T08-51-05_1.wfl.json  (+7 more)
OLP-39 Report Generator/: .gitignore  README.MD  README.md  pyproject.toml  requirements.txt
OLP-39 Report Generator/android/app/: build.gradle.kts
OLP-39 Report Generator/android/app/src/main/: AndroidManifest.xml
OLP-39 Report Generator/android/app/src/main/kotlin/com/example/flutter_olp39_report_generator/: MainActivity.kt
OLP-39 Report Generator/ios/Runner/: Info.plist
OLP-39 Report Generator/ios/Runner.xcodeproj/: project.pbxproj
OLP-39 Report Generator/linux/: CMakeLists.txt
OLP-39 Report Generator/linux/runner/: my_application.cc
OLP-39 Report Generator/macos/Runner.xcodeproj/: project.pbxproj
OLP-39 Report Generator/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
OLP-39 Report Generator/macos/Runner/Configs/: AppInfo.xcconfig
OLP-39 Report Generator/src/: converter.py  main.py  mainWindow.py  test.py  variables.py
OLP-39 Report Generator/test/: widget_test.dart
OLP-39 Report Generator/web/: index.html  manifest.json
OLP-39 Report Generator/windows/: CMakeLists.txt
OLP-39 Report Generator/windows/runner/: Runner.rc  main.cpp
ONA800/: README.md  main.py  requirements.txt  socketONA800_udpated.py  test_setup.py
(+9 files in other folders)
