[project]
name = "olp39report"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Caio Castro", email = "caio.silva@viavisolutions.com" }
]
dependencies = [
  "flet==0.28.3"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.viavisolutions"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "VIAVI OLP-39 Report"

# company name to display in about app dialogs
company = "VIAVI Solutions"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by VIAVI Solutions"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}